styles.css
/* ? Color Variables */
:root {
  --primary-theme-color: #dc143c;
}

* {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

a {
  text-decoration: none;
  color: var(--primary-theme-color);
}

li {
  list-style: none;
}

html {
  font-size: 10px;
  font-family: 'Montserrat', sans-serif;
}

img {
  height: 100%;
  object-fit: cover;
}

input {
  display: block;
  font-family: 'Montserrat', sans-serif;
}
p {
  font-size: 1.4rem;
  margin-top: 5px;
  line-height: 2.5rem;
  font-weight: 300;
  letter-spacing: 0.05rem;
  color: black;
}

.container {
  width: 100%;
  height: 100vh;
  display: flex;
  justify-content: center;
  align-items: center;
}

.section-title {
  font-size: 3rem;
  font-weight: 300;
  color: black;
  margin-bottom: 10px;
  text-transform: uppercase;
  letter-spacing: 0.2rem;
  text-align: center;
}

.section-title span {
  color: var(--primary-theme-color);
}

/* ? Header Section Styling */
header {
  position: fixed;
  z-index: 1000;
  left: 0;
  top: 0;
  width: 100vw;
  height: auto;
}

.header {
  min-height: 8vh;
  background-color: rgba(31, 30, 30, 0.24);
  display: flex;
  align-items: center;
}

nav {
  width: 100%;
  display: flex;
  justify-content: space-between;
  align-items: center;
  max-width: 1300px;
}

.brand {
  flex-basis: 60%;
}

.brand h1 {
  color: white;
  font-size: 18px;
  font-weight: 700;
}

.nav-list-container {
  flex-basis: 40%;
  display: flex;
  justify-content: flex-end;
  padding: 10px;
}
.nav-list {
  position: absolute;
  background-color: #29323c;
  width: 100vw;
  height: 100vh;
  left: 100%;
  top: 0;
  display: flex;
  flex-direction: column;
  justify-content: center;
  align-items: center;
  z-index: 1;
  overflow-x: hidden;
  transition: left 0.5s ease;
}

.nav-list.active {
  left: 0;
}

.nav-list a {
  font-size: 2.5rem;
  font-weight: 500;
  letter-spacing: 0.2rem;
  color: white;
  text-transform: uppercase;
  padding: 20px;
  display: block;
  transition: color 0.3s ease;
}

.nav-list a:hover {
  color: var(--primary-theme-color);
}
.nav-list a::after {
  content: attr(data-after);
  position: absolute;
  top: 50%;
  left: 50%;
  transform: translate(-50%, -50%) scale(0);
  color: #48556357;
  font-size: 8rem;
  letter-spacing: 40px;
  z-index: -1;
  text-align: center;
  transition: letter-spacing 0.3s ease;
}

.nav-list li:hover a::after {
  transform: translate(-50%, -50%) scale(1);
  letter-spacing: initial;
}

.hamburger {
  height: 60px;
  width: 60px;
  border: 3px solid white;
  border-radius: 50%;
  position: relative;
  justify-self: flex-end;
  display: flex;
  justify-content: center;
  align-items: center;
  z-index: 100;
  cursor: pointer;
  transform: scale(0.6);
}

.hamburger::after {
  position: absolute;
  content: '';
  height: 100%;
  width: 100%;
  border-radius: 50%;
  border: 3px solid var(--primary-theme-color);
  animation: hamburger_pulse 1.5s ease infinite;
}

.bar {
  height: 2px;
  width: 30px;
  position: relative;
  background-color: white;
  z-index: -1;
}

.bar::after,
.bar::before {
  content: '';
  position: absolute;
  height: 100%;
  width: 100%;
  left: 0;
  background-color: white;
  transition: 0.3s ease;
  transition-property: top, bottom;
}

.bar::after {
  top: 8px;
}

.bar::before {
  bottom: 8px;
}

.hamburger.active .bar::before {
  bottom: 0;
}
.hamburger.active .bar::after {
  top: 0;
}
/* ?Hero Section Styling */
#hero {
  background-image: url(./images/hero-bg-1.png);
  background-size: cover;
  background-position: top center;
  position: relative;
  z-index: 1;
}

#hero::after {
  content: '';
  position: absolute;
  left: 0;
  top: 0;
  width: 100%;
  height: 100%;
  background-color: black;
  opacity: 0.65;
  z-index: -1;
}

#hero h1 {
  font-size: 2.3rem;
  line-height: 3.6rem;
  margin-bottom: 1rem;
  width: fit-content;
  position: relative;
  color: transparent;
  animation: reveal-text 0.5s ease forwards;
  animation-delay: 1s;
}

#hero h1:nth-child(1) {
  animation-delay: 1s;
}

#hero h1:nth-child(2) {
  animation-delay: 2s;
}

#hero h1:nth-child(3) {
  animation: reveal-name 0.5s ease forwards;
  animation-delay: 3s;
}

#hero h1 span {
  position: absolute;
  top: 0;
  left: 0;
  height: 100%;
  width: 0;
  background-color: var(--primary-theme-color);
  animation: show-text 1s ease;
  animation-delay: 0.3s;
}

#hero h1:nth-child(1) span {
  animation-delay: 0.5s;
}

#hero h1:nth-child(2) span {
  animation-delay: 1.5s;
}

#hero h1:nth-child(3) span {
  animation-delay: 2.5s;
}

.hero {
  max-width: 1200px;
  margin: 0 auto;
  padding: 0 50px;
  justify-content: flex-start;
}

.portfolio-button {
  display: inline-block;
  margin: 3rem 0;
  padding: 8px 16px;
  font-size: 1.2rem;
  letter-spacing: 0.1rem;
  text-transform: uppercase;
  color: var(--primary-theme-color);
  background-color: transparent;
  border: 2px solid var(--primary-theme-color);
  transition: 0.3s all ease;
  cursor: pointer;
}

.portfolio-button:hover {
  background-color: var(--primary-theme-color);
  color: white;
}

/* ? Color Theme Selector */
.color-selector {
  width: 100%;
  display: flex;
  justify-content: center;
  align-items: center;
  gap: 2rem;
  position: absolute;
  bottom: 10%;
  left: 50%;
  transform: translateX(-50%);
}
.color-selector p {
  color: white;
  font-size: 20px;
}
.color-selector span {
  width: 20px;
  height: 20px;
  border-radius: 50%;
}
label[for='input-color-picker'] {
  color: white;
  font-size: 20px;
}

/* ? Services Section Styling */
.services {
  flex-direction: column;
  text-align: center;
  max-width: 1500px;
  margin: 0 auto;
  justify-content: space-around;
  text-align: center;
}

.service-bottom {
  height: 70%;
  display: flex;
  flex-wrap: wrap;
  justify-content: space-around;
  align-items: center;
  gap: 20px;
}
/* ... */

